10 apis called using bloc architecture

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.1
+  http: ^0.13.4
+  equatable:
+  intl: ^0.17.0
+  json_annotation:
+  flutter_secure_storage:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,6 +44,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  json_serializable:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
