--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,18 +29,17 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   datetime_picker_formfield: ^2.0.0
-  flutter_bloc: ^8.0.1
-  http: ^0.13.4
-  equatable:
-  intl: ^0.17.0
-  json_annotation:
-  flutter_secure_storage:
+  equatable: 
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.1
+  flutter_secure_storage: 
+  http: ^0.13.4
+  intl: ^0.17.0
+  json_annotation: 
 
 dev_dependencies:
   build_runner:
-  json_serializable:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -50,6 +49,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: null
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
